# quantcore

./: .gitignore  CMakeLists.txt  README.md  netlify.toml
bindings/: CMakeLists.txt  quantcore_py.cpp
core/: CMakeLists.txt
core/include/quantcore/: black_scholes.hpp  black_scholes_batch.hpp  monte_carlo.hpp  monte_carlo_gpu.hpp  monte_carlo_mt.hpp
core/src/: black_scholes.cpp  black_scholes_batch.cpp  monte_carlo.cpp  monte_carlo_gpu.mm  monte_carlo_mt.cpp
dashboard/: package-lock.json  package.json  playwright.config.ts
dashboard/app/: globals.css  layout.tsx
dashboard/components/: Dashboard.tsx
dashboard/tests/: dashboard.spec.ts
python/: benchmark.py  benchmark_v2.py  phase3_gate.py  phase3_per_iv.py  phase6_gate.py  quantcore_ref.py
server/: latency_harness.py  ws_server.py
tests/: CMakeLists.txt  phase1_validation.cpp
